Version 2.0, xx July 2004
 34. Start over with libtool style shared libraries version numbers. 
     Bump all major revisions to make sure nothing bad happens.
 33. Add a configure test for usablility of POSIX timers for a 
     100Hz sysClk.
 32. Add a 'tick' regress test to check the accuracy of sysClk. 
     (Linux 2.4 POSIX timers are known to be unable to set a clock
     at 100Hz).
 31. Some cleanups in header files: avoid nested includes. 
 30. Fix posterLib LP64 issues.
 29. Implemented a real-time logging library for RTAI. Added logInit and
     logEnd. Bumped portLib minor.
 28. Updated RTAI/user-space to handle multi-threaded linux processes.
     It now uses one real-time task per thread.
 27. Added devfs support for RTAI.
 26. install-sh does not overwrite files if they were not modified.
 25. Preliminary RTAI/user-space support. posterLib requires a more
     complicated implementation: as of now, posters can be shared between
     RTAI-tasks and linux processes but this breaks the real-time
     properties of RTAI-tasks.
 24. Added taskDelete() regression test.
 23. Added --with-debug option to configure script. It allows the
     selection of independant components to debug.
 22. Added h2devClean() in comLib. This was previously defined in h2.c
     but it was problematic for user-space RTAI version. Bumped comLib
     minor.
 21. Added taskOptionsSet()/taskOptionsGet() in taskLib and a new task's
     option bit PORTLIB_UNPRIVILEGED. This is used internally by comLib
     for user space communication under RTAI. Bumped portLib minor.
 20. Reworked makefiles and configure scripts in order to be able to
     compile both kernel modules and userspace libraries with the same
     configure; make; make install step under RTAI. 
 19. Added RTAI support.
 18. Added regression tests.
 17. Split h2devLib and smMemLib into os-independant and os-specific parts.
 16. Use memcpy instead of bcopy everywhere.