@@ -364,6 +364,7 @@ AC_OUTPUT(Init.make
 	src/comLib/Makefile
 	src/posterLib/Makefile
 	src/posterLib/posterServ/Makefile
+	src/posterLib/test/basic/Makefile
 	src/h2/Makefile
 	src/shell/Makefile
 	src/xes/Makefile
