@@ -14,7 +14,7 @@
  * OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
  */
 
-#include "config.h"
+#include "pocolibs-config.h"
 __RCSID("$LAAS$");
 #include <stdio.h>
 #include <stdlib.h>
